spacing fix

--- a/src/common_components/NavBar.css
+++ b/src/common_components/NavBar.css
@@ -158,6 +158,7 @@
   font-weight: 800;
   color: #888;
   margin-left: 1rem;
+  padding: 0 0.5rem;
 }
 .NavBar .close-search-btn:hover {
   cursor: pointer;
@@ -182,12 +183,17 @@
 
 .NavBar .suggestion-title {
   font-weight: 600;
+  margin-bottom: 0.5rem;
 }
 
 .NavBar .suggestion-link {
-  font-weight: 700;
+  font-weight: 600;
   color: #e60012;
-  line-height: 0.9rem;
+  padding: 0.1rem 0;
+}
+
+.NavBar .suggestion-link p {
+  margin: 0;
 }
 
 .NavBar .my-nav-btn {
